# scalperbot

./: .replit  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
polymarket_bot/: performance.db  requirements.txt  run.py  setup_keys.py
polymarket_bot/app/: orchestrator.py  trader.py
polymarket_bot/app/alpha/: fair_value.py  mispricing.py
polymarket_bot/app/core/: market_api.py  orderbook.py  sniper.py  spike.py  websocket.py
polymarket_bot/app/dashboard/: api.py  dashboard.py  index.html
polymarket_bot/app/execution/: trader.py
polymarket_bot/app/features/: engineering.py
polymarket_bot/app/ingestion/: social.py  whale.py
polymarket_bot/app/model/: probability.py
polymarket_bot/app/storage/: performance.py
polymarket_bot/app/strategy/: capital.py  decision.py  exit.py  optimizer.py  risk.py
